dev0001: History of changes
--------------------------------------------------------------------------------
V0.01:
FEATURE: Server side PR01 implementation with bit-bashed TWI

Tagged v0.01 25 Aug 2012

V0.01A: